# rr

./: .gitattributes  CMakeLists.txt  README.md  add_face.py  func.py  func_face.py  func_meter.py  func_smoke.py  main.cc  main.py  main1.py  main2.py  name_to_image_map.txt  read_meter.py  test.py  version_check.py  video_number.py  多线程检测系统使用说明.md
MVS-3.0.1_aarch64_20241128/: CPU_FM.sh  ExportAppName.sh  INSTALL  IOMMU_Open.sh  README  ScriptServer  set_env_path.sh  set_rp_filter.sh  set_sdk_version.sh  set_usb_priority.sh  setup.sh
include/: camera.h  camera_detector.h  camera_resource_pool.h  common.h  file_utils.h  gcd.h  image_drawing.h  image_utils.h  meter_postprocess.h  multi_thread_detection_system.h  postprocess.h  retinaface_postprocess.h  shared_camera_manager.h  yolov8.h
model/: face_labels_list.txt  flame_labels_list.txt  helmet_labels_list.txt  smoking_labels_list.txt
model_data/: mobilenet_face_encoding.npy  mobilenet_names.npy
rknnModel/: md1.rknn
rknpu1/: yolov8.cc
rknpu2/: yolov8.cc  yolov8_rv1106_1103.cc  yolov8_zero_copy.cc
src/: camera.cpp  camera_detector.cc  camera_resource_pool.cc  face_detection.cc  file_utils.cc  flame_detection.cc  gcd.cpp  helmet_detection.cc  image_drawing.cc  image_utils.cc  main.cpp  meter_postprocess.cc  multi_task_detection.cc  multi_window_detection.cc  postprocess.cc  retinaface_postprocess.cc  shared_camera_manager.cc  smoking_detection.cc
